--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@
 locale                   : "en-US"
 title                    : "Han Wang's Homepahe"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Han Wang"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://hanwang2021.github.io/HanWang.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
