--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,8 @@ author:
   name             : "Han Wang"
   pronouns         : # example: "she/her"  
   #bio              : "Short biography for the left-hand sidebar"
-  location         : "Karl-Schwarzschild-Str. 1 Garching Germany"
+  location         : "Karl-Schwarzschild-Str. 1 
+                      Garching Germany"
   employer         : "Max Planck Institute for Astrophysics"
   uri              : # URL
   email            : "wanghan@mpa-garching.mpg.de" 
@@ -48,7 +49,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  #bluesky          : "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
